--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.32.1",
+    "@tanstack/react-query-devtools": "^5.32.1",
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-country-flag": "^3.1.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
+    "react-router-dom": "^6.23.0",
+    "react-simple-star-rating": "^5.1.7",
+    "sass": "^1.76.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
